// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dotLayout: >  computedAmazonView 1`] = `
{
  "autoLayout": "TB",
  "edges": [
    {
      "headArrow": [
        [
          201,
          356,
        ],
        [
          198,
          365,
        ],
        [
          195,
          356,
        ],
      ],
      "id": "cloud.backend:amazon.s3",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            198,
            301,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          198,
          243,
        ],
        [
          198,
          279,
        ],
        [
          198,
          320,
        ],
        [
          198,
          356,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon.s3",
    },
  ],
  "height": 587,
  "id": "amazon",
  "nodes": [
    {
      "children": [
        "cloud.backend",
      ],
      "color": "primary",
      "id": "cloud",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "CLOUD",
          "width": 43,
        },
      ],
      "navigateTo": "cloudView",
      "parent": null,
      "position": [
        11,
        11,
      ],
      "shape": "rectangle",
      "size": {
        "height": 259,
        "width": 373,
      },
      "title": "cloud",
    },
    {
      "children": [
        "amazon.s3",
      ],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "AMAZON",
          "width": 53,
        },
      ],
      "parent": null,
      "position": [
        11,
        318,
      ],
      "shape": "rectangle",
      "size": {
        "height": 258,
        "width": 373,
      },
      "title": "Amazon",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.backend",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            123,
            95,
          ],
          "text": "Backend",
          "width": 68,
        },
      ],
      "parent": "cloud",
      "position": [
        38,
        63,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": "S3 is a storage service",
      "id": "amazon.s3",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            146,
            82,
          ],
          "text": "S3",
          "width": 22,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            90,
            112,
          ],
          "text": "S3 is a storage service",
          "width": 135,
        },
      ],
      "parent": "amazon",
      "position": [
        38,
        370,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "S3",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
        {
          "element": "cloud",
          "isDescedants": false,
        },
        {
          "source": {
            "element": "cloud",
            "isDescedants": true,
          },
          "target": {
            "element": "amazon",
            "isDescedants": false,
          },
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "viewOf": "amazon",
  "width": 395,
}
`;

exports[`dotLayout: >  computedCloud3levels 1`] = `
{
  "autoLayout": "TB",
  "edges": [
    {
      "headArrow": [
        [
          364,
          635,
        ],
        [
          355,
          639,
        ],
        [
          360,
          630,
        ],
      ],
      "id": "cloud.frontend.adminPanel:cloud.backend.graphql",
      "label": "fetches data in zero trust network with sso authentification",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            464,
            559,
          ],
          "text": "fetches data in zero trust network with",
          "width": 224,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            464,
            575,
          ],
          "text": "sso authentification",
          "width": 115,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          530,
          501,
        ],
        [
          478,
          542,
        ],
        [
          416,
          590,
        ],
        [
          362,
          632,
        ],
      ],
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          238,
          627,
        ],
        [
          235,
          636,
        ],
        [
          231,
          627,
        ],
      ],
      "id": "cloud.frontend.dashboard:cloud.backend.graphql",
      "label": "fetches data",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            232,
            566,
          ],
          "text": "fetches data",
          "width": 73,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          230,
          501,
        ],
        [
          231,
          540,
        ],
        [
          233,
          587,
        ],
        [
          234,
          627,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          474,
          727,
        ],
        [
          483,
          730,
        ],
        [
          474,
          734,
        ],
      ],
      "id": "cloud.backend.graphql:cloud.backend.storage",
      "label": null,
      "labels": [],
      "parent": "cloud.backend",
      "points": [
        [
          398,
          730,
        ],
        [
          424,
          730,
        ],
        [
          449,
          730,
        ],
        [
          474,
          730,
        ],
      ],
      "relations": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "source": "cloud.backend.graphql",
      "target": "cloud.backend.storage",
    },
    {
      "headArrow": [
        [
          654,
          949,
        ],
        [
          651,
          958,
        ],
        [
          648,
          949,
        ],
      ],
      "id": "cloud.backend.storage:amazon",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            651,
            911,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          651,
          821,
        ],
        [
          651,
          861,
        ],
        [
          651,
          908,
        ],
        [
          651,
          949,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend.storage",
      "target": "amazon",
    },
    {
      "headArrow": [
        [
          230,
          307,
        ],
        [
          227,
          316,
        ],
        [
          224,
          307,
        ],
      ],
      "id": "customer:cloud.frontend.dashboard",
      "label": "opens in browser",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            227,
            239,
          ],
          "text": "opens in browser",
          "width": 102,
        },
      ],
      "parent": null,
      "points": [
        [
          227,
          181,
        ],
        [
          227,
          220,
        ],
        [
          227,
          267,
        ],
        [
          227,
          307,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
    {
      "headArrow": [
        [
          648,
          307,
        ],
        [
          644,
          316,
        ],
        [
          641,
          307,
        ],
      ],
      "id": "support:cloud.frontend.adminPanel",
      "label": "manages",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            644,
            239,
          ],
          "text": "manages",
          "width": 55,
        },
      ],
      "parent": null,
      "points": [
        [
          644,
          181,
        ],
        [
          644,
          220,
        ],
        [
          644,
          267,
        ],
        [
          644,
          307,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
  ],
  "height": 1142,
  "id": "cloud3levels",
  "nodes": [
    {
      "children": [
        "cloud.frontend.adminPanel",
        "cloud.frontend.dashboard",
        "cloud.backend",
      ],
      "color": "primary",
      "id": "cloud",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            14,
          ],
          "text": "CLOUD",
          "width": 43,
        },
      ],
      "navigateTo": "cloudView",
      "parent": null,
      "position": [
        11,
        256,
      ],
      "shape": "rectangle",
      "size": {
        "height": 631,
        "width": 869,
      },
      "title": "cloud",
    },
    {
      "children": [
        "cloud.backend.graphql",
        "cloud.backend.storage",
      ],
      "color": "primary",
      "id": "cloud.backend",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "BACKEND",
          "width": 60,
        },
      ],
      "parent": "cloud",
      "position": [
        51,
        589,
      ],
      "shape": "rectangle",
      "size": {
        "height": 258,
        "width": 789,
      },
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            122,
            95,
          ],
          "text": "customer",
          "width": 72,
        },
      ],
      "parent": null,
      "position": [
        67,
        0,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            90,
            74,
          ],
          "text": "Support Engineer",
          "width": 135,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            47,
            104,
          ],
          "text": "Support engineers are responsible for",
          "width": 224,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            95,
            120,
          ],
          "text": "supporting customers",
          "width": 128,
        },
      ],
      "parent": null,
      "position": [
        484,
        0,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            126,
            82,
          ],
          "text": "Amazon",
          "width": 64,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            78,
            112,
          ],
          "text": "Amazon is a cloud provider",
          "width": 161,
        },
      ],
      "navigateTo": "amazon",
      "parent": null,
      "position": [
        491,
        962,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Amazon",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The admin panel is a webapp that allows support staff to manage customer data.",
      "id": "cloud.frontend.adminPanel",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            76,
            74,
          ],
          "text": "Admin Panel Webapp",
          "width": 168,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            40,
            103,
          ],
          "text": "The admin panel is a webapp that allows",
          "width": 241,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            44,
            119,
          ],
          "text": "support staff to manage customer data.",
          "width": 232,
        },
      ],
      "parent": "cloud",
      "position": [
        482,
        321,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 323,
      },
      "title": "Admin Panel Webapp",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The customer dashboard is a webapp that allows customers to view their data.",
      "id": "cloud.frontend.dashboard",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            46,
            74,
          ],
          "text": "Customer Dashboard Webapp",
          "width": 235,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            39,
            103,
          ],
          "text": "The customer dashboard is a webapp that",
          "width": 250,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            59,
            119,
          ],
          "text": "allows customers to view their data.",
          "width": 211,
        },
      ],
      "parent": "cloud",
      "position": [
        61,
        321,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 331,
      },
      "title": "Customer Dashboard Webapp",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Component that allows to query data via GraphQL.",
      "id": "cloud.backend.graphql",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            110,
            74,
          ],
          "text": "Graphql API",
          "width": 95,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            39,
            104,
          ],
          "text": "Component that allows to query data via",
          "width": 238,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            128,
            120,
          ],
          "text": "GraphQL.",
          "width": 59,
        },
      ],
      "parent": "cloud.backend",
      "position": [
        78,
        640,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Graphql API",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The backend storage is a component that stores data.",
      "id": "cloud.backend.storage",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            95,
            74,
          ],
          "text": "Backend Storage",
          "width": 133,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            39,
            104,
          ],
          "text": "The backend storage is a component that",
          "width": 246,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            127,
            120,
          ],
          "text": "stores data.",
          "width": 70,
        },
      ],
      "parent": "cloud.backend",
      "position": [
        487,
        640,
      ],
      "shape": "storage",
      "size": {
        "height": 180,
        "width": 327,
      },
      "title": "Backend Storage",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
        {
          "element": "cloud.frontend",
          "isDescedants": true,
        },
        {
          "element": "cloud.backend",
          "isDescedants": true,
        },
      ],
      "isInclude": true,
    },
    {
      "exprs": [
        {
          "element": "cloud.frontend",
          "isDescedants": false,
        },
      ],
      "isInclude": false,
    },
  ],
  "title": "",
  "viewOf": "cloud",
  "width": 891,
}
`;

exports[`dotLayout: >  computedCloudView 1`] = `
{
  "autoLayout": "TB",
  "edges": [
    {
      "headArrow": [
        [
          680,
          394,
        ],
        [
          689,
          397,
        ],
        [
          680,
          401,
        ],
      ],
      "id": "cloud.frontend:cloud.backend",
      "label": "fetches data",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            571,
            387,
          ],
          "text": "fetches data",
          "width": 73,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          526,
          397,
        ],
        [
          576,
          397,
        ],
        [
          630,
          397,
        ],
        [
          680,
          397,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "headArrow": [
        [
          857,
          583,
        ],
        [
          854,
          593,
        ],
        [
          851,
          583,
        ],
      ],
      "id": "cloud.backend:amazon",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            854,
            546,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          854,
          488,
        ],
        [
          854,
          518,
        ],
        [
          854,
          552,
        ],
        [
          854,
          584,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon",
    },
    {
      "headArrow": [
        [
          302,
          295,
        ],
        [
          304,
          304,
        ],
        [
          296,
          298,
        ],
      ],
      "id": "customer:cloud.frontend",
      "label": "opens in browser",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            263,
            239,
          ],
          "text": "opens in browser",
          "width": 102,
        },
      ],
      "parent": null,
      "points": [
        [
          221,
          181,
        ],
        [
          245,
          217,
        ],
        [
          273,
          259,
        ],
        [
          298,
          296,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
    {
      "headArrow": [
        [
          435,
          298,
        ],
        [
          427,
          304,
        ],
        [
          430,
          295,
        ],
      ],
      "id": "support:cloud.frontend",
      "label": "manages",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            475,
            239,
          ],
          "text": "manages",
          "width": 55,
        },
      ],
      "parent": null,
      "points": [
        [
          511,
          181,
        ],
        [
          487,
          217,
        ],
        [
          458,
          259,
        ],
        [
          433,
          296,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
  ],
  "height": 777,
  "id": "cloudView",
  "nodes": [
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "id": "cloud",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            14,
          ],
          "text": "CLOUD",
          "width": 43,
        },
      ],
      "navigateTo": "cloud3levels",
      "parent": null,
      "position": [
        179,
        256,
      ],
      "shape": "rectangle",
      "size": {
        "height": 258,
        "width": 861,
      },
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            122,
            95,
          ],
          "text": "customer",
          "width": 72,
        },
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            90,
            74,
          ],
          "text": "Support Engineer",
          "width": 135,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            46,
            104,
          ],
          "text": "Support engineers are responsible for",
          "width": 224,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            94,
            120,
          ],
          "text": "supporting customers",
          "width": 128,
        },
      ],
      "parent": null,
      "position": [
        411,
        0,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            125,
            82,
          ],
          "text": "Amazon",
          "width": 64,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            77,
            112,
          ],
          "text": "Amazon is a cloud provider",
          "width": 161,
        },
      ],
      "navigateTo": "amazon",
      "parent": null,
      "position": [
        694,
        597,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Amazon",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.frontend",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            122,
            95,
          ],
          "text": "Frontend",
          "width": 70,
        },
      ],
      "parent": "cloud",
      "position": [
        206,
        307,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Frontend",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.backend",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            123,
            95,
          ],
          "text": "Backend",
          "width": 68,
        },
      ],
      "parent": "cloud",
      "position": [
        694,
        307,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Backend",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "viewOf": "cloud",
  "width": 1051,
}
`;

exports[`dotLayout: >  computedIndexView 1`] = `
{
  "autoLayout": "TB",
  "edges": [
    {
      "headArrow": [
        [
          369,
          566,
        ],
        [
          366,
          576,
        ],
        [
          363,
          566,
        ],
      ],
      "id": "cloud:amazon",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            366,
            529,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          366,
          471,
        ],
        [
          366,
          501,
        ],
        [
          366,
          535,
        ],
        [
          366,
          566,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud",
      "target": "amazon",
    },
    {
      "headArrow": [
        [
          298,
          278,
        ],
        [
          301,
          287,
        ],
        [
          293,
          281,
        ],
      ],
      "id": "customer:cloud",
      "label": "opens in browser",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            270,
            239,
          ],
          "text": "opens in browser",
          "width": 102,
        },
      ],
      "parent": null,
      "points": [
        [
          224,
          181,
        ],
        [
          247,
          212,
        ],
        [
          272,
          247,
        ],
        [
          294,
          279,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud",
    },
    {
      "headArrow": [
        [
          439,
          281,
        ],
        [
          431,
          287,
        ],
        [
          434,
          278,
        ],
      ],
      "id": "support:cloud",
      "label": "manages",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            474,
            239,
          ],
          "text": "manages",
          "width": 55,
        },
      ],
      "parent": null,
      "points": [
        [
          507,
          181,
        ],
        [
          485,
          212,
        ],
        [
          460,
          247,
        ],
        [
          437,
          279,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud",
    },
  ],
  "height": 760,
  "id": "index",
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            122,
            95,
          ],
          "text": "customer",
          "width": 72,
        },
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            90,
            74,
          ],
          "text": "Support Engineer",
          "width": 135,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            46,
            104,
          ],
          "text": "Support engineers are responsible for",
          "width": 224,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            94,
            120,
          ],
          "text": "supporting customers",
          "width": 128,
        },
      ],
      "parent": null,
      "position": [
        411,
        0,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            136,
            95,
          ],
          "text": "cloud",
          "width": 42,
        },
      ],
      "navigateTo": "cloudView",
      "parent": null,
      "position": [
        206,
        290,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            125,
            82,
          ],
          "text": "Amazon",
          "width": 64,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            77,
            112,
          ],
          "text": "Amazon is a cloud provider",
          "width": 161,
        },
      ],
      "navigateTo": "amazon",
      "parent": null,
      "position": [
        206,
        580,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "width": 731,
}
`;
